# Desafio2-Informatica2

Codigo-desafio/: CMakeLists.txt  datos.cpp  datos.h  eliminatorias.cpp  eliminatorias.h  equipo.cpp  equipo.h  grupo.cpp  grupo.h  jugador.cpp  jugador.h  lectura.cpp  lectura.h  main.cpp  participacion.cpp  participacion.h  partido.cpp  partido.h  torneo.cpp  torneo.h  utils.cpp  utils.h
Documentacion/: Informe desafío II.docx  Preinforme desafío II.docx
